--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
             <li>Contact</li>
         </ul>
     </nav>
+    <div class="nav2">
+        <h2>Quotes</h2>
+    </div>
     <div class="container">
      <div class="card">
         <h1>Quotes</h1>
