--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
     <div class="container">
      <div class="card">
-        <h1>Quotes</h1>
-        <p>authour............</p>
+        <h1>The best and most beautiful things in the world cannot be seen or even touched - they must be felt with the heart.</h1>
+        <p>Helen Keller</p>
         <button><i class="fa-solid fa-dice-one" style="color: #000000ab;"></i></button>
      </div>
 
